# focalite

./: AGENTS.md  CLAUDE.md  PRIVACY_POLICY.md  package.json  pnpm-lock.yaml  svelte.config.js  test-preferences.md  vite.config.js
.claude/: settings.local.json
.github/workflows/: build-desktop.yml  build-windows.yml  build.yml  release.yml
docs/downloads/v0.1.1/: Focalite_0.1.1_x64_en-US.msi
scripts/: bump-version.mjs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/components/: BreakTimer.svelte  BreakView.svelte  FocusTimer.svelte  KeyboardShortcut.svelte  SettingsPanel.svelte  SettingsPanel.test.ts  StatsPanel.svelte  TimerSettings.svelte  TimerView.svelte
src/lib/components/ui/chart/: chart-container.svelte  chart-tooltip.svelte
src/lib/components/ui/tabs/: tabs-list.svelte  tabs-trigger.svelte
src/lib/services/: notifications.ts  sounds.ts
src/lib/stores/: kv-store.ts  preferences.svelte.ts  preferences.test.ts  preferences.ts  progress.svelte.ts  progress.test.ts  progress.ts  store-utils.test.ts  store-utils.ts  timer.svelte.ts  timer.test.ts
src/routes/: +page.svelte
src/routes/break-overlay/: +page.svelte
src/test/: setup.ts
zprompts/: refactor-todo.md
