[package]
name = "focalite"
version = "0.3.0"
description = "Windows Pomodoro focus timer (Tauri v2 + Svelte 5)"
authors = ["Edwards Presume"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "focalite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"

[profile.release]
# Smaller, optimized Windows binaries for Tauri apps
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"
